--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+##Cores e estilos 
+
 :root {
-    --primary-color: #F4CE01;
-    --secondary-color: #0F0F0B;
+    --primary-color: #C74F7O;
+    --secondary-color: #0c7c21;
 }
 
 * {
